[package]
name = "what-the-src"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apt-parser = "1.0.6"
async-compression = { version = "0.4.8", features = ["tokio", "gzip", "xz", "bzip2", "zstd"] }
async-stream = "0.3.5"
blake2 = "0.10.6"
clap = { version = "4.5.4", features = ["derive", "env"] }
data-encoding = "2.6.0"
diffy-fork-filenames = "0.4.0"
digest = "0.10.7"
dotenvy = "0.15.7"
env_logger = "0.11.3"
fd-lock = "4.0.2"
futures = "0.3.30"
handlebars = { version = "5.1.2", features = ["rust-embed"] }
hex = "0.4.3"
log = "0.4.21"
num-format = "0.4.4"
plist = "1.6.1"
regex = "1.10.4"
reqwest = { version = "0.12.3", default-features = false, features = ["rustls-tls-webpki-roots", "stream", "socks"] }
rpm = { version = "0.14.0", default-features = false }
rust-embed = "8.3.0"
serde = { version = "1.0.197", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.115"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "chrono"] }
sqlx-migrate = { version = "0.7.1", features = ["postgres"] }
srcinfo = "1.1.0"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "io-std", "fs", "process"] }
tokio-tar = "0.3.1"
tokio-util = "0.7.10"
toml = "0.8.12"
url-escape = "0.1.1"
warp = "0.3.7"
warp-embed = "0.5.0"
yarn-lock-parser = "0.7.0"
yash-syntax = "0.8.0"

[dev-dependencies]
maplit = "1.0.2"
