[package]
name = "what-the-src"
version = "0.1.0"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apt-parser = "1.0.6"
astral-tokio-tar = "0.5"
async-compression = { version = "0.4.8", features = ["tokio", "gzip", "xz", "bzip2", "zstd"] }
async-stream = "0.3.5"
blake2 = "0.10.6"
clap = { version = "4.5.4", features = ["derive", "env"] }
data-encoding = "2.6.0"
diffy-fork-filenames = "0.4.0"
digest = "0.10.7"
dotenvy = "0.15.7"
env_logger = "0.11.3"
fastrand = "2.1.0"
fd-lock = "4.0.2"
futures = "0.3.30"
handlebars = { version = "6", features = ["rust-embed"] }
hex = "0.4.3"
log = "0.4.21"
lz4_flex = "0.12"
num-format = "0.4.4"
plist = "1.6.1"
regex = "1.10.4"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "stream", "socks"] }
rpm = { version = "0.16", default-features = false }
rust-embed = "8.3.0"
serde = { version = "1.0.197", features = ["derive"] }
serde-xml-rs = "0.8"
serde_json = "1.0.115"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "chrono", "postgres"] }
srcinfo = "2"
thiserror = "2"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "io-std", "fs", "process"] }
tokio-util = "0.7.10"
toml = "0.9"
url-escape = "0.1.1"
warp = "0.3.7"
warp-embed = "0.5.0"
yarn-lock-parser = "0.13"
yash-syntax = "0.13"

[dev-dependencies]
maplit = "1.0.2"
